feat: update recommended api
